--- a/content/02.md
+++ b/content/02.md
@@ -34,3 +34,14 @@
    ```execute
    curl -u admin:admin http://localhost:5000
    ```
+
+## Exercise 1
+
+Assuming we don't know the username and password, but we know they're probably something default/trivial. We can quickly test our hypothesis with `hydra`:
+
+1. Install `hydra` with `apt`
+
+2. Download appropriate wordlists E.g., from [SecLists](https://github.com/danielmiessler/SecLists)
+   - You don't have to clone the full repository. For now, just `wget` the files you need
+
+3. Launch the attack (check help menu for parameters)
