--- a/content/06.md
+++ b/content/06.md
@@ -60,9 +60,7 @@ Use case: **Digital Signatures with GPG**
     gpg --verify email.txt.sig email.txt
     ```
 
-### Exercise 4
-
-Explain in 1-2 sentences:
+### Questions for discussion
 
 - Why non-repudiation implies authenticity?
 - Why authenticity implies integrity?
