--- a/content/03.md
+++ b/content/03.md
@@ -9,7 +9,7 @@
       open('db.sqlite','w').close()
       conn = sqlite3.connect('db.sqlite')
       conn.execute('CREATE TABLE Users(name TEXT, pass_hash TEXT)')
-      conn.execute(f'INSERT INTO Users(name, pass_hash) VALUES("admin", "891f490e5d7bdb06d90d56f8d7db405f")')
+      conn.execute(f'INSERT INTO Users(name, pass_hash) VALUES("admin", "667ff118ef6d196c96313aeaee7da519")')
       conn.commit()
       conn.close()
    ```
@@ -47,16 +47,7 @@
       app.run()
    ```
 
-## Exercise 1
+## Exercise 2
 
-Hack this app using at least **two different approaches** (i.e., get admin password then log in using it).
-
-Options:
-
-1. Online brute-forcer (Python) against the app
-2. Offline brute-forcer (Python) against the hash
-3. Reverse hash lookup websites (rainbow table)
-
-For options 1 and 2, assume you know that the password won't exceed 4 lowercase english letters.
-
-**Additionaly**, what could be a mechanism to protect against the first attack option? (mentioning technical terms is enough).
+1. Use reverse hash lookup websites (rainbow tables) to get the admin password and use it to login with `curl`.
+2. Update the code to keep the password trivial but prevent reverse hash lookups (explain why your update works).
