Updates for the new renderer

--- a/content/01.md
+++ b/content/01.md
@@ -6,20 +6,20 @@ Let's build a minimal web app (frontend, backend, database) for experimentation.
 
 1. Install dependencies
 
-   ```execute
+   ```bash
    sudo apt install python3 python3-venv
    ```
 
 2. Prepare work directory
 
-   ```execute
+   ```bash
    mkdir project
    cd project
    ```
 
 3. Install flask (web framework) in a virtual environment
 
-   ```execute
+   ```bash
    python3 -m venv venv
    source venv/bin/activate.fish
    pip install flask flask-httpauth pyjwt
@@ -29,7 +29,7 @@ Let's build a minimal web app (frontend, backend, database) for experimentation.
 
 1. Create minimal `app.py`
 
-   ```copy
+   ```python
    from flask import Flask
 
    app = Flask(__name__)
@@ -44,12 +44,12 @@ Let's build a minimal web app (frontend, backend, database) for experimentation.
 
 2. Run server in one terminal
 
-   ```execute
+   ```bash
    python3 app.py
    ```
 
 3. Access in another terminal
 
-   ```execute
+   ```bash
    curl http://localhost:5000
    ```
