--- a/content/02.md
+++ b/content/02.md
@@ -2,7 +2,7 @@
 
 1. Add a single admin user and password
 
-   ```copy
+   ```python
    from flask import Flask
    from flask_httpauth import HTTPBasicAuth
 
@@ -25,13 +25,13 @@
 
 2. Try accessing homepage without credentials
 
-   ```execute
+   ```bash
    curl http://localhost:5000
    ```
 
 3. Try again with credentials
 
-   ```execute
+   ```bash
    curl -u admin:admin http://localhost:5000
    ```
 
