--- a/content/03.md
+++ b/content/03.md
@@ -2,7 +2,7 @@
 
 1. It's probably better to store password hashes in a database instead of plaintext passwords in code. Create `init_db.py` to intitialize a SQLite database following this method.
 
-   ```copy
+   ```python
    import sqlite3
 
    if __name__ == '__main__':
@@ -14,13 +14,13 @@
       conn.close()
    ```
 
-   ```execute
+   ```bash
    python3 init_db.py 
    ```
 
 2. Modify `app.py` to read values from the db.
 
-   ```copy
+   ```python
    from flask import Flask
    from flask_httpauth import HTTPBasicAuth
    from hashlib import md5
