--- a/content/04.md
+++ b/content/04.md
@@ -4,7 +4,7 @@ After you demolished the app security in exercise 1, the admin decided to implem
 
 The updated `app.py` now looks like this (no database involved):
 
-```copy
+```python
 from flask import Flask
 from flask_httpauth import HTTPTokenAuth
 from secrets import token_hex
