--- a/content/05.md
+++ b/content/05.md
@@ -21,7 +21,7 @@ The goal is generally to extract the hashes from such artifacts into a format th
 
     - To build `john` from source
 
-        ```copy
+        ```bash
         wget https://github.com/openwall/john/archive/refs/heads/bleeding-jumbo.zip
         unzip bleeding-jumbo.zip
         cd john-bleeding-jumbo/john/src/
@@ -32,24 +32,24 @@ The goal is generally to extract the hashes from such artifacts into a format th
 
     - To use [community packages](https://github.com/openwall/john-packages). For Linux, there are packages for snap, flatpak, and a docker image. Try it with:
 
-    ```copy
+    ```bash
     docker run --rm ghcr.io/openwall/john" --help
     ```
 
 2. Download a popular password wordlist (also, checkout [seclists](https://github.com/danielmiessler/SecLists) for different scenarios.)
 
-    ```execute
+    ```bash
     wget https://gitlab.com/kalilinux/packages/wordlists/-/raw/kali/master/rockyou.txt.gz
     gunzip rockyou.txt.gz
     ```
 
 3. Let's crack a SHA-1 using the wordlist.
 
-    ```execute
+    ```bash
     echo "b0f98804c509999fc028a2267597baac38464af7" > hash.txt
     ```
 
-    ```copy
+    ```bash
     john-bleeding-jumbo/john/run/john --format=raw-sha1 --wordlist=rockyou.txt hash.txt
     ```
 
@@ -57,7 +57,7 @@ The goal is generally to extract the hashes from such artifacts into a format th
 
 You managed to obtain a zip archive with secret data, but it's password-protected. Use `john` to crack the file.
 
-```execute
+```bash
 wget http://renderer:10082/workshop/archive.zip
 ```
 
