--- a/content/06.md
+++ b/content/06.md
@@ -10,7 +10,7 @@ Use case: **Internet/UDP checksum**
 - Checksum can use simple binary compuation (e.g., 1's complement addition), CRC, or a hash function (MD/SHA).
 - Receiver verifies checksum: a mismatch means that the message was probably corrupted in transit and should be discarded.
 
-```copy-and-edit
+```shell
 echo -n 'message' | cksum -a [crc|md5|sha1|...]
 ```
 
@@ -25,7 +25,7 @@ Use case: **HMAC-SHA used in OSPFv2**.
 - To prevent that, trusted routers are preconfigured with a shared secret `S`
 - A message is considered *authentic* if it also includes a valid HMAC(M, S)
 
-```copy
+```bash
 echo -n "Important_Routing_Information" | openssl dgst -sha1 -hmac "Routers_Shared_Secret"
 ```
 
@@ -37,26 +37,26 @@ Use case: **Digital Signatures with GPG**
 
 1. Enter your details (name, email) for GPG to create your public and secret keys in `~/.gngpg`
 
-    ```execute
+    ```bash
     gpg --generate-key
     ```
 
 2. Export public key if needed to share
 
-    ```copy-and-edit
-    gpg --armor --export "Your Name" > pubkey.asc 
+    ```shell
+    gpg --armor --export "<Your Name>" > pubkey.asc 
     ```
 
 3. Sign some data using your key
 
-    ```execute
+    ```bash
     echo "Important Email from Me" > email.txt
     gpg --detach-sign --sign --output email.txt.sig email.txt
     ```
 
 4. For a friend to verify your `email.txt`, they need to either trust you directly (`gpg --import pubkey.asc`) or have you in their [web of trust](https://en.wikipedia.org/wiki/Web_of_trust) (to trust someone who trusts someones ... who trusts you)
 
-    ```execute
+    ```bash
     gpg --verify email.txt.sig email.txt
     ```
 
