--- a/content/00.md
+++ b/content/00.md
@@ -1,29 +1,30 @@
-# Important Concepts
+# Introduction
 
 ### 1. Message Integrity
 
-> Trust that a message was not altered from some "reference version".
+> Trust that a message was not altered (e.g., by mistake) from some intended "reference version".
 
-Use case: **Internet/UDP checksum**
+Example use case: **Internet/UDP checksum**
 
 - Sender includes checksum in UDP header: (src_port, dst_port, length, **checksum**, data)
-- Checksum can use simple binary compuation (e.g., 1's complement addition), CRC, or a hash function (MD/SHA).
+- Checksum can use simple binary compuation (e.g., 1's complement addition), CRC, or a hash function from MD/SHA families.
 - Receiver verifies checksum: a mismatch means that the message was probably corrupted in transit and should be discarded.
+  - Note that anyone can form a message with a valid checksum!
 
-```shell
-echo -n 'message' | cksum -a [crc|md5|sha1|...]
+```bash
+echo -n 'message' | cksum -a crc
 ```
 
 ### 2. Authenticity (Message Authentication)
 
 > Trust that the "reference version" came from the *someone* with knowledge of a shared secret.
 
-Use case: **HMAC-SHA used in OSPFv2**.
+Example use case: **HMAC-SHA used in OSPFv2**.
 
 - A group of routers are broadcasting important routing messages `M` in plaintext.
 - A malicious actor in the network can join the party and start broadcasting false information.
 - To prevent that, trusted routers are preconfigured with a shared secret `S`
-- A message is considered *authentic* if it also includes a valid HMAC(M, S)
+- A message is considered *authentic* if it includes a valid HMAC(M, S): Hash-based Message Authentication Code.
 
 ```bash
 echo -n "Important_Routing_Information" | openssl dgst -sha1 -hmac "Routers_Shared_Secret"
@@ -31,9 +32,9 @@ echo -n "Important_Routing_Information" | openssl dgst -sha1 -hmac "Routers_Shar
 
 ### 3. Non-Repudiation
 
-> Trust that information could have only been authored by a specific entity.
+> Trust that information could have only been authored by a specific entity. This entity **cannot deny** that they authored the data.
 
-Use case: **Digital Signatures with GPG**
+Example use case: **Digital signatures for software/email with GNU Privacy Guard (GPG)**
 
 1. Enter your details (name, email) for GPG to create your public and secret keys in `~/.gngpg`
 
@@ -64,4 +65,4 @@ Use case: **Digital Signatures with GPG**
 
 - Why non-repudiation implies authenticity?
 - Why authenticity implies integrity?
-- Why this implication goes in one direction but not the other?
+- Why HMAC is not a simple hash of (message+secret)?
