--- a/content/01.md
+++ b/content/01.md
@@ -1,6 +1,6 @@
-# Introduction
+# User and Message Authentication
 
-Let's build a minimal web app (frontend, backend, database) for experimentation.
+In this lab, we will build a simple web app, with a focus on authentication methods (and breaking them!).
 
 ## Prepare Environment
 
@@ -42,7 +42,7 @@ Let's build a minimal web app (frontend, backend, database) for experimentation.
       app.run()
    ```
 
-2. Run server in one terminal
+2. Run server in one terminal (split with `Alt+n`)
 
    ```bash
    python3 app.py
@@ -53,3 +53,7 @@ Let's build a minimal web app (frontend, backend, database) for experimentation.
    ```bash
    curl http://localhost:5000
    ```
+
+## Exercise 1
+
+Can you create the same app in Node.js with Express? `node` is already installed in the lab environment.
