--- a/content/03.md
+++ b/content/03.md
@@ -9,7 +9,7 @@
       open('db.sqlite','w').close()
       conn = sqlite3.connect('db.sqlite')
       conn.execute('CREATE TABLE Users(name TEXT, pass_hash TEXT)')
-      conn.execute(f'INSERT INTO Users(name, pass_hash) VALUES("admin", "667ff118ef6d196c96313aeaee7da519")')
+      conn.execute(f'INSERT INTO Users(name, pass_hash) VALUES("admin", "345301f693deda839f7ed280a4b30763")')
       conn.commit()
       conn.close()
    ```
@@ -47,7 +47,7 @@
       app.run()
    ```
 
-## Exercise 2
+## Exercise 3
 
 1. Use reverse hash lookup websites (rainbow tables) to get the admin password and use it to login with `curl`.
-2. Update the code to keep the password trivial but prevent reverse hash lookups (explain why your update works).
+2. Update the code to keep the password trivial but prevent reverse hash lookups (explain why your security fix works).
