--- a/content/05.md
+++ b/content/05.md
@@ -24,50 +24,48 @@ The goal is generally to extract the hashes from such artifacts into a format th
         ```bash
         wget https://github.com/openwall/john/archive/refs/heads/bleeding-jumbo.zip
         unzip bleeding-jumbo.zip
-        cd john-bleeding-jumbo/john/src/
+        cd john-bleeding-jumbo/src/
         ./configure
         make -s clean && make -sj4
-        cd ../../..
+        cd ..
         ```
 
-    - To use [community packages](https://github.com/openwall/john-packages). For Linux, there are packages for snap, flatpak, and a docker image. Try it with:
+    - To use [community packages](https://github.com/openwall/john-packages). For Linux, there are packages for snap, flatpak, and a docker image. Docker image can be launched with a simple command:
 
-    ```bash
-    docker run --rm ghcr.io/openwall/john" --help
-    ```
+        ```bash
+        docker run --rm ghcr.io/openwall/john" --help
+        ```
 
-2. Download a popular password wordlist (also, checkout [seclists](https://github.com/danielmiessler/SecLists) for different scenarios.)
+2. Download `rockyou.txt`: a very popular password wordlist
 
     ```bash
     wget https://gitlab.com/kalilinux/packages/wordlists/-/raw/kali/master/rockyou.txt.gz
     gunzip rockyou.txt.gz
     ```
 
-3. Let's crack a SHA-1 using the wordlist.
+3. Let's crack a SHA-1 hash using the wordlist.
 
     ```bash
     echo "b0f98804c509999fc028a2267597baac38464af7" > hash.txt
     ```
 
     ```bash
-    john-bleeding-jumbo/john/run/john --format=raw-sha1 --wordlist=rockyou.txt hash.txt
+    ./run/john --format=raw-sha1 --wordlist=rockyou.txt hash.txt
     ```
-
-## Exercise 4
-
-You managed to obtain a zip archive with secret data, but it's password-protected. Use `john` to crack the file.
-
-```bash
-wget http://renderer:10082/workshop/archive.zip
-```
 
 ## Exercise 5
 
-A path traveral exploit for a web app allowed you to see the content of `/etc/passwd` and `/etc/shadow` for a target system [recall the format](https://en.wikipedia.org/wiki/Passwd#Password_file)
+Additional tools from the `john` suite can help extract hashes from other formats (e.g., zip archive, passwd+shadow files, authentication pcap) into a format that `john` understands. Practice with two scenarios:
 
-- Passwd entry: `dev:x:1001:1001::/home/dev:/usr/bin/fish`
-- Shadow entry `dev:$y$j9T$g3GP/xAvGNuETEqlI.ifO/$0bqofShzjiLT1v0dMyvlirrJa2II9X3fTEQVnqCmi3/:20326:0:99999:7:::`
+1. You managed to obtain a zip archive with secret data, but it's password-protected. Extract the hashes and crack the file.
 
-Use `john` to crack the password.
+    ```bash
+    wget http://renderer:10082/workshop/content/archive.zip
+    ```
+
+2. A path traveral exploit for a web app allowed you to see the content of `/etc/passwd` and `/etc/shadow` for a target system [[recall the format]](https://en.wikipedia.org/wiki/Passwd#Password_file). Combine the entries and crack the password.
+
+    - Passwd entry: `dev:x:1001:1001::/home/dev:/usr/bin/fish`
+    - Shadow entry `dev:$y$j9T$g3GP/xAvGNuETEqlI.ifO/$0bqofShzjiLT1v0dMyvlirrJa2II9X3fTEQVnqCmi3/:20326:0:99999:7:::`
 
 > Recall: [UNIX Password Scheme](https://d2vlcm61l7u1fs.cloudfront.net/media%2F608%2F6087c87d-da9d-4d24-bffc-5802f54192d8%2Fphp3KhbvO.png)
