--- a/content/04.md
+++ b/content/04.md
@@ -1,44 +1,70 @@
 # Token-Based Authentication
 
-After you demolished the app security in exercise 1, the admin decided to implement the secure token-based authentication with JWTs.
+After you demolished the app security in previous exercises, the admin decided to implement the secure token-based authentication with JWTs!
 
-The updated `app.py` now looks like this (no database involved):
+> Essential reading: [How JWTs work?](https://www.geeksforgeeks.org/web-tech/json-web-token-jwt/)
+
+The verification logic now looks like this:
 
 ```python
-from flask import Flask
-from flask_httpauth import HTTPTokenAuth
+from flask import Flask, request
 from secrets import token_hex
+from hashlib import sha1
+from time import sleep
 import jwt
 
 
 app = Flask(__name__)
-auth = HTTPTokenAuth('Bearer')
-app_secret = token_hex(2)
+signing_key = token_hex(2)
 
-@auth.verify_token
-def verify_token(token):
-    try:
-        data = jwt.decode(token, app_secret, algorithms=['HS256'])
-    except:
-        return False
-    if data.get("admin", False):
-        return "admin"
+@app.route('/get_token', methods=['POST'])
+def get_token():
+    data = request.get_json()
+    sleep(1)
+    
+    if not data or 'password' not in data:
+        return "Password is required in JSON body", 400
+    
+    password = data['password']
 
+    if sha1(password.encode()).hexdigest() != '74e427e6ba3384f715373f5d707e388320e80a9f':
+        return f"Regular token: {jwt.encode({"admin": False}, signing_key, algorithm='HS256')}"
+    
+    return f"Admin token: {jwt.encode({"admin": True}, signing_key, algorithm='HS256')}"
 
-@app.route('/')
-@auth.login_required
+@app.route('/admin', methods=['POST'])
 def index():
-    return f"Hello, {auth.current_user()}"
+    data = request.get_json()
+    if not data or 'token' not in data:
+        return "Token is required in JSON body", 400
+    
+    token = data['token']
+    
+    try:
+        data = jwt.decode(token, signing_key, algorithms='HS256')
+    except:
+        return "Invalid token", 400
+    
+    if data.get("admin", False):
+        return "You won!", 200
+    
+    return f"Unauthorized", 401
 
 if __name__ == '__main__':
     app.run()
 ```
 
-## Exercise 3
+## Explanation
 
-- Run the application in one terminal.
-- Hack it in the other (i.e., send a valid `curl` command that gets you logged in as admin).
+1. Anyone can request a token by making a request `GET /get_token?password=<REDACTED>`
+2. Only admin token contains payload {admin: True}
+3. Only the admin can `GET /admin`
 
-Assume the attacker sees the above source code.
+## Exercise 4
+
+1. Run the application in one terminal. Do NOT modify the code!
+2. Hack it in the other (i.e., send a valid `curl` command that gets you logged in as admin).
+
+Assume the attacker has access to this source code (white-box testing).
 
 > Hint: you don't always have to waste time writing exploits, maybe there is an existing tool to help?
